# datafun-07-ml

./: README.md  main.py  pyproject.toml  smith_ml.ipynb
Notebooks/: smith_ml.ipynb  smith_part3_ml.ipynb
