[project]
name = "datafun-07-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyarrow",
    "beautifulsoup4",
    "dweepy",
    "geopy",
    "imageio",
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "nltk",
    "numpy",
    "pandas",
    "prospector",
    "scikit-learn",
    "scipy",
    "seaborn",
    "spacy",
    "textatistic",
    "textblob"
]
